--- a/Changelog
+++ b/Changelog
@@ -21,6 +21,7 @@ UPGRADE NOTES
 ENHANCEMENTS
 
 * core: allow exclude (!) to work for regexp matches as well (Matthias Kerk) #3720 - MF
+* core: make logging of external command errors more verbose (Anton Lofgren, op5 team) #4402 - MF
 
 * classic ui: add display filter modification for status.cgi #852 - RB
 * classic ui: log errors into cgi log (use_logging=1) #4389 - MF
