--- a/Changelog
+++ b/Changelog
@@ -29,6 +29,7 @@ ENHANCEMENTS
 * classic ui: allow to exclude custom variable name/value based on pattern #4390 - MF
 
 * idoutils: add a table trimming option for 'downtime history' #3989 - MF
+* idoutils: add processed macro strings into database (notes, notes_url, action_url, icon_image) #1883 - MF
 
 * install: allow enable perfdata config switch via configure #3996 - MF
 * install: add --enable-debug=yes/no to set specific compiler flags for gdb, valgrind #4387 - MF
@@ -62,6 +63,11 @@ CHANGES
 
 * idoutils: add max_downtimhistory_age to ido2db.cfg #3989
 * idoutils: remove enable_sla functionality (deprecated in 1.9) #4363
+* idoutils: new hosts/table columns for expanded macros #1883
+	** notes_expanded
+	** notes_url_expanded
+	** action_url_expanded
+	** icon_image_expanded
 
 * install: configure --enable-perfdata sets icinga.cfg:process_performance_data #3996
 
