idoutils: fix duration integer columns could run out of range
fixes #4420

--- a/THANKS
+++ b/THANKS
@@ -96,6 +96,7 @@ in various ways.  If we missed your name, let us know.
 * Carsten Emde
 * Rob Enders
 * Lars Engels
+* William Epler
 * Andreas Ericsson
 * Matt Ezell
 * Sylvain Falardeau
