--- a/Changelog
+++ b/Changelog
@@ -45,6 +45,7 @@ FIXES
 * classic ui: fixed Generated HTML code partly invalid #3608 - RB/Dakon
 
 * idoutils: remove enable_sla functionality (deprecated in 1.9) #4363
+* idoutils: fix duration integer columns could run out of range (William Epler) #4420 - MF
 
 SUPPORT
 * fixed gcc warnings about unused vars and unused return values #3984 - RB
