--- a/Changelog
+++ b/Changelog
@@ -54,6 +54,7 @@ FIXES
 * idoutils: remove enable_sla functionality (deprecated in 1.9) #4363
 * idoutils: fix duration integer columns could run out of range (William Epler) #4420 - MF
 * idoutils: remove timedevent support and tables #4482 - MF
+* idoutils: fix comments(history) UK misses object_id, not allowing the same comment on host AND service #4544 - MF
 
 * install: fix initscripts exit-code 1 on start when service is already started (thx Marco Hoyer) #4393 - MF
 
@@ -82,6 +83,7 @@ CHANGES
 * idoutils: add max_downtimhistory_age to ido2db.cfg #3989
 * idoutils: remove enable_sla functionality (deprecated in 1.9) #4363
 * idoutils: remove timedevents functionality, drop tables #4482
+* idoutils: unique constraint on comments/commenthistory tables #4544
 
 * install: configure --enable-perfdata sets icinga.cfg:process_performance_data #3996
 
