core: avoid unnecessary ctime() calls when debugging is disabled, increase performance (Opsview Team)
interesting. now the straces make more sense, and the ctime() calls are
hidden below a check if debugging should actually happening, being
avoided in productive environments.

not that i would expect huge performance increasement, but some cpu
cycle savings of course.

fixes #4681

--- a/Changelog
+++ b/Changelog
@@ -23,6 +23,7 @@ ENHANCEMENTS
 
 * core: allow exclude (!) to work for regexp matches as well (Matthias Kerk) #3720 - MF
 * core: make logging of external command errors more verbose (Anton Lofgren, op5 team) #4402 - MF
+* core: avoid unnecessary ctime() calls when debugging is disabled, increase performance (Opsview Team) #4681 - MF
 
 * classic ui: add display filter modification for status.cgi #852 - RB
 * classic ui: log errors into cgi log (use_logging=1) #4389 - MF
