--- a/Changelog
+++ b/Changelog
@@ -47,6 +47,7 @@ FIXES
 
 * classic ui: fixed Generated HTML code partly invalid #3608 - RB/Dakon
 * classic ui: fix empty REMOTE_ADDR env var causes sigsegv in cmd.cgi (use_logging=1) #4445 - MF
+* classic ui: fixed disapearing scheduled downtime for down hosts in tac.cgi #4260 - RB
 
 * idoutils: remove enable_sla functionality (deprecated in 1.9) #4363
 * idoutils: fix duration integer columns could run out of range (William Epler) #4420 - MF
