classic-ui: Changelog entry for #4404 added
refs: #4404

--- a/Changelog
+++ b/Changelog
@@ -52,6 +52,7 @@ FIXES
 
 * classic ui: fixed Generated HTML code partly invalid #3608 - RB/Dakon
 * classic ui: fix empty REMOTE_ADDR env var causes sigsegv in cmd.cgi (use_logging=1) #4445 - MF
+* classic ui: Hostgroup/Servicegroup Overview: hosts not sorted alphabetical #4404 - RB
 
 * idoutils: remove enable_sla functionality (deprecated in 1.9) #4363
 * idoutils: fix duration integer columns could run out of range (William Epler) #4420 - MF
