--- a/Changelog
+++ b/Changelog
@@ -32,6 +32,8 @@ ENHANCEMENTS
 
 FIXES
 
+* idoutils: check for undersized data-packets and ignore them to eliminate null transactions to the database #4221 - CF
+
 
 1.11.5 - 20/06/2014
 
