--- a/Changelog
+++ b/Changelog
@@ -31,6 +31,7 @@ ENHANCEMENTS
 * classic ui: allow to exclude custom variable name/value based on pattern #4390 - MF
 * classic ui: add make install-classicui-standalone-conf as seperated config installation #4664 - MF
 * classic ui: added performance data to extinfo json output #4728 - RB
+* classic ui: show backend version info from status file (1.x or 2.x) #4737 - MF
 
 * idoutils: add a table trimming option for 'downtime history' #3989 - MF
 * idoutils: allow to disable customvar status updates with dump_customvar_status=0|1 in idomod.cfg #4479 - MF
