--- a/Changelog
+++ b/Changelog
@@ -66,6 +66,7 @@ FIXES
 * idoutils: fix duration integer columns could run out of range (William Epler) #4420 - MF
 * idoutils: remove timedevent support and tables #4482 - MF
 * idoutils: fix comments(history) UK misses object_id, not allowing the same comment on host AND service #4544 - MF
+* idoutils: fix contact_notificationcommands contain garbage and insert faulty command object ids (thx mhein/mjentsch) #4799 - MF
 
 * install: fix initscripts exit-code 1 on start when service is already started (thx Marco Hoyer) #4393 - MF
 
