classic-ui: adding Thanks for live search #1657
Thank you so much for your contribution.

--- a/THANKS
+++ b/THANKS
@@ -180,6 +180,7 @@ in various ways.  If we missed your name, let us know.
 * Martin F. Krafft
 * Julius Kriukas
 * Christoph Kron
+* Ondra 'Kepi' Kudlík
 * Ivan Kuncl
 * Dean Lane
 * Ingo Lantschner
