core/idoutils: revert check_source attribute due to mod_gearman manipulating in-memory checkresult list
mod_gearman uses the old nagios headers where check_source is not
available. while using object compiler tricks with attribute at the end
will work on direct object casts, this does not work with a neb broker
addon which manipulates the doubly-linked check result list in memory
stashing objects of different type altogether causing memory corruption.

while the "thing" mod_gearman does in core memory remains a clear
violation of the neb api ("subscribe to a neb callback and do stuff")
it's just yet another proof that the neb api is not a safe place for
innovative core features at all.

reverting the check_source feature in 1.x for the sake of compatibility
and only using 'check_source' in Icinga 2 as additional attribute.

(been saying that for 4+ years now that core memory manipulation by addons
is a bad thing, but noone ever believed me)

refs #4958

--- a/Changelog
+++ b/Changelog
@@ -13,6 +13,12 @@ UPGRADE NOTES
 	- idoutils: ${source}/module/idoutils/config/updates
 * package locations may differ!
 
+1.10.1 - XX/YY/2013
+
+* core/idoutils: revert check_source attribute due to mod_gearman manipulating in-memory checkresult list #4958 - MF
+	** classic ui/idoutils schema: functionality is kept only for Icinga 2 support
+
+
 1.10.0 - 24/10/2013
 
 * idoutils: slahistory table must be removed manually after enable_sla removal #4363
