--- a/Changelog
+++ b/Changelog
@@ -13,6 +13,13 @@ UPGRADE NOTES
 	- idoutils: ${source}/module/idoutils/config/updates
 * package locations may differ!
 
+1.11.0 - 13/03/2014
+
+ENHANCEMENTS
+
+* classic ui: add status.cgi modifed_attributes filter parameter #4880 - RB
+
+
 1.10.0 - 24/10/2013
 
 * idoutils: slahistory table must be removed manually after enable_sla removal #4363
