--- a/THANKS
+++ b/THANKS
@@ -232,7 +232,7 @@ in various ways.  If we missed your name, let us know.
 * Remi Paulmier
 * Alex Peeters
 * Bruce Pennypacker
-* Hans-Christian Petersen
+* Marc-Christian Petersen
 * James "Showkilr" Peterson
 * Cary Petterborg
 * Bill Pier
