--- a/Changelog
+++ b/Changelog
@@ -13,6 +13,13 @@ UPGRADE NOTES
 	- idoutils: ${source}/module/idoutils/config/updates
 * package locations may differ!
 
+1.10.2 - ??/??/????
+
+FIXES
+
+* classic ui: fix status output in JSON format not including short and long plugin output properly #5217 - RB
+
+
 1.10.1 - 04/11/2013
 
 ENHANCEMENTS
