classic-ui: add groups Notes and Action URL links to status summary, overview and grid #5301
Added action_url and notes_url next to group name in
* group overview
* group summary
* group grid

refs: #5301
whatthecommit: can you tell i'm bored?

--- a/Changelog
+++ b/Changelog
@@ -20,6 +20,7 @@ ENHANCEMENTS
 
 * classic ui: add status.cgi modifed_attributes filter parameter #4880 - RB
 * classic ui: add "current_notification_number" to jsonoutput of hosts and services in status.cgi #5370 - RB
+* classic ui: add groups Notes and Action URL links to status summary, overview and grid #5301 - RB
 
 FIXES
 * classic ui: getcgivars() fails to produce proper key/value list causing a potential buffer-overflow condition #5276 - CF
