--- a/Changelog
+++ b/Changelog
@@ -40,6 +40,7 @@ FIXES
 * classic ui: fix status output in JSON format not including short and long plugin output properly #5217 - RB
 * classic ui: fix possible buffer overflows #5250 - RB
 * classic ui: fix Off-by-one memory access in process_cgivars() #5251 - RB
+* classic ui: fix cmd.c which was broken by previous fix for #5276 - CF
 
 * idoutils: idoutils oracle compile error #5059 - TD
 * idoutils: Oracle update script 1.10.0 failes while trying to drop nonexisting index #5256 - RB
