--- a/Changelog
+++ b/Changelog
@@ -27,6 +27,7 @@ ENHANCEMENTS
 FIXES
 
 * core: allow exclude (!) to work for regexp matches for hosts (Franky Van Liedekerke) #5324 - MF
+* core: fix retained host check attempts being 0/1 #5061 - MF
 
 * classic ui: getcgivars() fails to produce proper key/value list causing a potential buffer-overflow condition #5276 - CF
 * classic ui: fix vulnerability against CSRF attacks CVE-2013-7107 #5346 - RB
