--- a/Changelog
+++ b/Changelog
@@ -18,6 +18,8 @@ UPGRADE NOTES
 
 ENHANCEMENTS
 
+* core: add statehistory entries for newly added services (checkresult with OK state) #3854 - MF
+
 * classic ui: add status.cgi modifed_attributes filter parameter #4880 - RB
 * classic ui: add "current_notification_number" to jsonoutput of hosts and services in status.cgi #5370 - RB
 * classic ui: add groups Notes and Action URL links to status summary, overview and grid #5301 - RB
